--- a/Landing/index.html
+++ b/Landing/index.html
@@ -121,7 +121,7 @@ How? By informing them where they can pick up the lunchbox that is left on buffe
                 </h5>
                     <div class="row">
                         <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-                            <form class="form-inline" role="form">
+                            <form class="form-inline" role="form" action="MAILTO:vamshimuga304@gmail.com" method="post" enctype="text/plain">
                                 <div class="form-group">
                                     <label class="sr-only" for="exampleInputEmail2">Email address</label>
                                     <input type="email" class="form-control transparent" placeholder="Your email here...">
