--- a/Landing/index.html
+++ b/Landing/index.html
@@ -126,7 +126,7 @@ How? By informing them where they can pick up the lunchbox that is left on buffe
                                     <label class="sr-only" for="exampleInputEmail2">Email address</label>
                                     <input type="email" class="form-control transparent" placeholder="Your email here...">
                                 </div>
-                                <input type="submit" class="btn btn-danger btn-fill">
+                                <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
                             </form>
 
                         </div>
