--- a/Landing/index.html
+++ b/Landing/index.html
@@ -2,45 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <meta name="viewport" content="width=device-width" />
 
-    <title>Food Box </title>
+  <title>Food Box </title>
 
-    <link href="css/bootstrap.css" rel="stylesheet" />
-    <link href="css/coming-sssoon.css" rel="stylesheet" />
+  <link href="css/bootstrap.css" rel="stylesheet" />
+  <link href="css/coming-sssoon.css" rel="stylesheet" />
 
-    <!--     Fonts     -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+  <!--     Fonts     -->
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
 
 </head>
 
 <body>
-    <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
+  <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="images/flags/US.png" /> English(US)
-                            <b class="caret"></b>
-                        </a>
-                        <!--  <ul class="dropdown-menu">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <img src="images/flags/US.png" /> English(US)
+              <b class="caret"></b>
+            </a>
+            <!--  <ul class="dropdown-menu">
                             <li>
                                 <a href="#"><img src="images/flags/DE.png" /> Deutsch</a>
                             </li>
@@ -72,76 +72,81 @@
                             </li>
 
                         </ul> -->
-                    </li>
+          </li>
 
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" target="_blank">
-                            <i class="fa fa-facebook-square"></i> Share
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <i class="fa fa-twitter"></i> Tweet
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <i class="fa fa-envelope-o"></i> Email
-                        </a>
-                    </li>
-                </ul>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#" target="_blank">
+              <i class="fa fa-facebook-square"></i> Share
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <i class="fa fa-twitter"></i> Tweet
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <i class="fa fa-envelope-o"></i> Email
+            </a>
+          </li>
+        </ul>
 
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-    <div class="main" style="background-image: url('images/Vegie_buffet.jpg')">
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <div class="main" style="background-image: url('images/Vegie_buffet.jpg')">
 
-        <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
+    <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
 
-        <div class="cover black" data-color="black"></div>
+    <div class="cover black" data-color="black"></div>
 
-        <!--   You can change the black color for the filter with those colors: blue, green, red, orange       -->
+    <!--   You can change the black color for the filter with those colors: blue, green, red, orange       -->
 
-        <div class="container">
-            <h1 class="logo cursive">
+    <div class="container">
+      <h1 class="logo cursive">
             Leftover mums
         </h1>
-            <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
+      <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
 
-            <div class="content">
-                <h4 class="motto">To whom? Budget-conscious young people, probably students.
+      <div class="content">
+        <h4 class="motto">To whom? Budget-conscious young people, probably students.
 How? By informing them where they can pick up the lunchbox that is left on buffets or events</h4>
-                <div class="subscribe">
-                    <h5 class="info-text">
+        <div class="subscribe">
+          <h5 class="info-text">
                     Join the waiting list for the beta. We keep you posted. 
                 </h5>
-                    <div class="row">
-                        <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-                            <form class="form-inline" role="form" action="MAILTO:vamshimuga304@gmail.com" method="post" enctype="text/plain">
-                                <div class="form-group">
-                                    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                                    <input type="email" class="form-control transparent" placeholder="Your email here...">
-                                </div>
-                                <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
-                            </form>
-
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
+              <form action="//formspree.io/your@email.com" method="POST">
+                <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
+                <input type="submit" value="Send">
+              </form>
+              <!--<form class="form-inline" role="form" action="MAILTO:vamshimuga304@gmail.com" method="post" enctype="text/plain">
+                <div class="form-group">
+                  <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                  <input type="email" class="form-control transparent" placeholder="Your email here...">
                 </div>
+                <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
+              </form>-->
+
             </div>
+          </div>
         </div>
-        <div class="footer">
-            <div class="container">
-                Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="footer">
+      <div class="container">
+        Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 
 </html>
