--- a/Landing/index.html
+++ b/Landing/index.html
@@ -8,7 +8,7 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta name="viewport" content="width=device-width" />
 
-  <title>Food Box </title>
+  <title>Eat Up</title>
 
   <link href="css/bootstrap.css" rel="stylesheet" />
   <link href="css/coming-sssoon.css" rel="stylesheet" />
