--- a/Landing/index.html
+++ b/Landing/index.html
@@ -108,7 +108,7 @@
 
     <div class="container">
       <h1 class="logo cursive">
-            Leftover mums
+            Eat Up
         </h1>
       <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
 
