--- a/Landing/index.html
+++ b/Landing/index.html
@@ -121,7 +121,7 @@ How? By informing them where they can pick up the lunchbox that is left on buffe
                 </h5>
           <div class="row">
             <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-              <form action="//formspree.io/your@email.com" method="POST">
+              <form action="//formspree.io/mikko@eatup.se" method="POST">
                 <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
                 <input type="submit" value="Send">
               </form>
@@ -140,7 +140,7 @@ How? By informing them where they can pick up the lunchbox that is left on buffe
     </div>
     <div class="footer">
       <div class="container">
-
+        Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
       </div>
     </div>
   </div>
