value proposition updated

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -36,10 +36,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="images/flags/US.png" /> English(US)
-              <b class="caret"></b>
-            </a>
+            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+  <img src="images/flags/US.png" /> English(US)
+  <b class="caret"></b>
+</a>-->
             <!--  <ul class="dropdown-menu">
                             <li>
                                 <a href="#"><img src="images/flags/DE.png" /> Deutsch</a>
@@ -86,11 +86,11 @@
               <i class="fa fa-twitter"></i> Tweet
             </a>
           </li>
-          <li>
+          <!--<li>
             <a href="#" target="_blank">
               <i class="fa fa-envelope-o"></i> Email
             </a>
-          </li>
+          </li>-->
         </ul>
 
       </div>
@@ -113,8 +113,8 @@
       <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
 
       <div class="content">
-        <h4 class="motto">To whom? Budget-conscious young people, probably students.
-How? By informing them where they can pick up the lunchbox that is left on buffets or events</h4>
+        <h4 class="motto">Our channel Eat Up helps restaurants, that need to minimize their leftover food and market their dicounts, to reach customers and monetize leftover food. <!--To whom? Budget-conscious young people, probably students.
+How? By informing them where they can pick up the lunchbox that is left on buffets or events--></h4>
         <div class="subscribe">
           <h5 class="info-text">
                     Join the waiting list for the beta. We keep you posted. 
