--- a/Landing/index.html
+++ b/Landing/index.html
@@ -140,7 +140,7 @@
       <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
 
       <div class="content">
-        <h4 class="motto">Our channel Eat Up helps restaurants, that need to minimize their leftover food and market their dicounts, to reach customers and monetize leftover food. <!--To whom? Budget-conscious young people, probably students.
+        <h4 class="motto">Our channel Eat Up helps restaurants, that need to minimize their leftover food and market their discounts, to reach customers and monetize leftover food. <!--To whom? Budget-conscious young people, probably students.
 How? By informing them where they can pick up the lunchbox that is left on buffets or events--></h4>
         <div class="subscribe">
           <h5 class="info-text">
