--- a/Landing/index.html
+++ b/Landing/index.html
@@ -12,10 +12,12 @@
 
   <link href="css/bootstrap.css" rel="stylesheet" />
   <link href="css/coming-sssoon.css" rel="stylesheet" />
+  <link href="css/vid.css" rel="stylesheet" />
 
   <!--     Fonts     -->
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+
 
 </head>
 
@@ -27,150 +29,69 @@
       if (d.getElementById(id)) return;
       js = d.createElement(s);
       js.id = id;
-      js.src = "//connect.facebook.net/fi_FI/sdk.js#xfbml=1&version=v2.5";
+      js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
   </script>
-  <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+
+  <div class="homepage-hero-module">
+    <div class="video-container">
+      <div class="filter"></div>
+      <video autoplay loop class="fillWidth">
+        <source src="video/Veggie-Stand/MP4/Veggie-Stand.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+        <source src="video/Veggie-Stand/WEBM/Veggie-Stand.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      </video>
+      <div class="poster hidden">
+        <img src="video/Veggie-Stand/Snapshots/Veggie-Stand.jpg" alt="">
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-  <img src="images/flags/US.png" /> English(US)
-  <b class="caret"></b>
-</a>-->
-            <!--  <ul class="dropdown-menu">
-                            <li>
-                                <a href="#"><img src="images/flags/DE.png" /> Deutsch</a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/GB.png" /> English(UK)</a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/FR.png" /> Français</a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/RO.png" /> Română</a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/IT.png" /> Italiano</a>
-                            </li>
-
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#"><img src="images/flags/ES.png" /> Español <span class="label label-default">soon</span></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/BR.png" /> Português <span class="label label-default">soon</span></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/JP.png" /> 日本語 <span class="label label-default">soon</span></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="images/flags/TR.png" /> Türkçe <span class="label label-default">soon</span></a>
-                            </li>
-
-                        </ul> -->
-          </li>
-
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <div class="fb-share-button" data-href="http://eatup.se/" data-layout="button"></div>
-            <!--<a href="#" target="_blank">
-  <i class="fa fa-facebook-square"></i> Share
-</a>-->
-          </li>
-          <li class="twit">
-            <a href="https://twitter.com/share" class="twitter-share-button fa fa-twitter">Tweet</a>
-            <script>
-              ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                  p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                  js = d.createElement(s);
-                  js.id = id;
-                  js.src = p + '://platform.twitter.com/widgets.js';
-                  fjs.parentNode.insertBefore(js, fjs);
-                }
-              }(document, 'script', 'twitter-wjs');
-
-            </script>
-            <!--<a href="#" target="_blank">
-  <i class="fa fa-twitter"></i> Tweet
-</a>-->
-          </li>
-          <!--<li>
-            <a href="#" target="_blank">
-              <i class="fa fa-envelope-o"></i> Email
-            </a>
-          </li>-->
-        </ul>
-
-      </div>
-      <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container -->
-  </nav>
-  <div class="main" style="background-image: url('images/Vegie_buffet.jpg')">
+  </div>
 
-    <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
-
-    <div class="cover black" data-color="black"></div>
-
-    <!--   You can change the black color for the filter with those colors: blue, green, red, orange       -->
-
-    <div class="container">
-      <h1 class="logo cursive">
+  <div class="title-container">
+    <h1 class="logo cursive">
             Eat Up
         </h1>
-      <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
-
-      <div class="content">
-        <h4 class="motto">Our channel Eat Up helps restaurants, that need to minimize their leftover food and market their discounts, to reach customers and monetize leftover food. <!--To whom? Budget-conscious young people, probably students.
-How? By informing them where they can pick up the lunchbox that is left on buffets or events--></h4>
-        <div class="subscribe">
-          <h5 class="info-text">
+    <div class="content">
+      <h4 class="motto">Eat Up is a channel that helps restaurants that need to minimize their leftover food and market their discounts to reach customers and monetize leftover food.</h4>
+      <div class="subscribe">
+        <h5 class="info-text">
                     Join the waiting list for the beta. We keep you posted. 
                 </h5>
-          <div class="row">
-            <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-              <form class="form-area" action="//formspree.io/mikko@eatup.se" method="POST">
-                <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
-                <input type="submit" value="Send" class="btn-mi">
-              </form>
-              <!--<form class="form-inline" role="form" action="MAILTO:vamshimuga304@gmail.com" method="post" enctype="text/plain">
-                <div class="form-group">
-                  <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                  <input type="email" class="form-control transparent" placeholder="Your email here...">
-                </div>
-                <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
-              </form>-->
-
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+            <form class="form-area" action="//formspree.io/mikko@eatup.se" method="POST">
+              <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
+              <input type="submit" value="Send" class="btn-mi">
+            </form>
+            <div class="social">
+              <div class="col-md-3 col-md-offset-3">
+                <div class="fb-share-button social" data-href="http://eatup.se/" data-layout="button"></div>
+              </div>
+              <div class="col-md-3">
+                <a href="https://twitter.com/share" class="twitter-share-button fa fa-twitter social" data-text="Eat UP http://eatup.se/" data-url="http://eatup.se/">Tweet</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="container">
-
-      </div>
-    </div>
   </div>
+
+  <script>
+    ! function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        p = /^http:/.test(d.location) ? 'http' : 'https';
+      if (!d.getElementById(id)) {
+        js = d.createElement(s);
+        js.id = id;
+        js.src = p + '://platform.twitter.com/widgets.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }
+    }(document, 'script', 'twitter-wjs');
+
+  </script>
+
 
   <script>
     (function(i, s, o, g, r, a, m) {
