--- a/Landing/index.html
+++ b/Landing/index.html
@@ -69,7 +69,7 @@
                 <div class="fb-share-button social" data-href="http://eatup.se/" data-layout="button"></div>
               </div>
               <div class="col-md-3">
-                <a href="https://twitter.com/share" class="twitter-share-button fa fa-twitter social" data-text="Eat UP http://eatup.se/" data-url="http://eatup.se/">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button fa fa-twitter social" data-text="Eat UP" data-url="http://eatup.se/">Tweet</a>
               </div>
             </div>
           </div>
@@ -77,7 +77,15 @@
       </div>
     </div>
   </div>
-
+    
+  <!--<div class="container-fluid">
+      <div class="row">
+          <h3>Check our solution</h3>
+          <div class="col-md-6 col-md-offset-3">
+          </div>
+          Here is some more stuff that me might want to put on the website
+      </div>
+  </div>-->
   <script>
     ! function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0],
