--- a/Landing/index.html
+++ b/Landing/index.html
@@ -60,7 +60,7 @@
                 </h5>
         <div class="row">
           <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-            <form class="form-area" action="//formspree.io/mikko@eatup.se" method="POST">
+            <form class="form-area" id="contact-form">
               <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
               <input type="submit" value="Send" class="btn-mi">
             </form>
@@ -82,8 +82,8 @@
       <div class="row">
           <h3>Check our solution</h3>
           <div class="col-md-6 col-md-offset-3">
+            Here is some more stuff that me might want to put on the website
           </div>
-          Here is some more stuff that me might want to put on the website
       </div>
   </div>-->
   <script>
