--- a/Landing/index.html
+++ b/Landing/index.html
@@ -60,10 +60,13 @@
                 </h5>
         <div class="row">
           <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-            <form class="form-area" id="contact-form">
-              <input id="mail" placeholder="Your Email address" type="email" name="_replyto">
-              <input type="submit" value="Send" class="btn-mi">
+            <form class="form-group" id="contact-form">
+              <input id="mail" class="form-control" placeholder="Your Email address" type="email" name="_replyto">
+              <input type="submit" class="btn btn-primary" value="Send">
             </form>
+            <div class="response">
+
+            </div>
             <div class="social">
               <div class="col-md-3 col-md-offset-3">
                 <div class="fb-share-button social" data-href="http://eatup.se/" data-layout="button"></div>
@@ -77,7 +80,7 @@
       </div>
     </div>
   </div>
-    
+
   <!--<div class="container-fluid">
       <div class="row">
           <h3>Check our solution</h3>
