--- a/Landing/index.html
+++ b/Landing/index.html
@@ -53,7 +53,7 @@
             Eat Up
         </h1>
     <div class="content">
-      <h4 class="motto">We help restaurants that need to minimize their leftover food and market their discounts to reach customers and monetize leftover food.</h4>
+      <h4 class="motto">Helping you find healthy and affordable meal deals at your campus.</h4>
       <div class="subscribe">
         <h5 class="info-text">
                     Join the waiting list for the beta. We keep you posted. 
